2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3/s3.py: improved retrying in send_request() and send_file()

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* s3cmd, S3/S3.py, NEWS: "s3cmd mv" for moving objects

2008-11-24  Michal Ludvig  <michal@logix.cz>

	* S3/Utils.py: Common XML parser.
	* s3cmd, S3/Exeptions.py: Print info message on Error.

2008-11-21  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Support for 'cp' command.
	* S3/S3.py: Added S3.object.copy() method.
	* s3cmd.1: Document 'cp' command.
	* NEWS: Let everyone know ;-)
	Thanks Andrew Ryan for a patch proposal!
	https://sourceforge.net/forum/forum.php?thread_id=2346987&forum_id=618865

2008-11-17  Michal Ludvig  <michal@logix.cz>

	* S3/Progress.py: Two progress meter implementations.
	* S3/Config.py, s3cmd: New --progress / --no-progress parameters
	  and Config() members.
	* S3/S3.py: Call Progress() in send_file()/recv_file()
	* NEWS: Let everyone know ;-)

2008-11-16  Michal Ludvig  <michal@logix.cz>

	* NEWS: Fetch 0.9.8.4 release news from 0.9.8.x branch.

2008-11-16  Michal Ludvig  <michal@logix.cz>

	Merge from 0.9.8.x branch, rel 251:
	* S3/S3.py: Adjusting previous commit (orig 249) - it's not a good idea 
	  to retry ALL failures. Especially not those code=4xx where AmazonS3 
	  servers are not happy with our requests.
	Merge from 0.9.8.x branch, rel 249:
	* S3/S3.py, S3/Exception.py: Re-issue failed requests in S3.send_request()
	Merge from 0.9.8.x branch, rel 248:
	* s3cmd: Don't leak open filehandles in sync. Thx Patrick Linskey for report.
	Merge from 0.9.8.x branch, rel 247:
	* s3cmd: Re-raise the right exception.
	Merge from 0.9.8.x branch, rel 246:
	* s3cmd, S3/S3.py, S3/Exceptions.py: Don't abort 'sync' or 'put' on files
	  that can't be open (e.g. Permision denied). Print a warning and skip over
	  instead.
	Merge from 0.9.8.x branch, rel 245:
	* S3/S3.py: Escape parameters in strings. Fixes sync to and 